fixed text-align cotrols

--- a/src-client/styles.css
+++ b/src-client/styles.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700&subset=latin-ext,vietnamese');
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,600');
 *, *::before, *::after {
     box-sizing: border-box;
+}
+
+.docs-index ul {
+  font-family: 'Montserrat', sans-serif;
+  line-height: 2;
+  list-style-type: none;
 }
 
 body {
